# AI-3

./: .env.example  .gitignore  README.MD  config.py  dialog_service.py  faiss_db.py  logger.ini  main.py  main_window.py  pyproject.toml  requirements.txt  say.py  say_say.py  set_logger.py  speech_controller.py  test_faiss.py  vector_store.py  video.py
data/faiss_data/: KeyWords.json  input.txt  my_keywords.json  stop_words.txt
data/faiss_data/summary/: summary100.json  summary150.json  summary200.json  summary250.json  summary300.json  summary350.json  summary50.json  summary_final.json
heritage/heritage/: app.py
heritage/heritage/templates/: index.html
scripts/: test_faiss.py
scripts/tools/: audio_synthesizer.py  loop_play.py  ollama_summarizer.py  rename_image.py
src/mudan/: __init__.py  app.py  config.py  dialog_service.py  main_window.py  set_logger.py  speech_controller.py  vector_store.py  video.py
utils/: audio_synthesizer.py  final_result_input.txt  loop_play.py  pygame_stream_test.py  rename_image.py
web/front/: README_EN.md  index.html
web/front/css/: style.css
web_front/: README.md  index.html  setting.json
web_front/js/: main.js
